syntax = "proto3";
package org.grapheco.aipm.rpc;

service FaceFeatureApi {
//  support stream service?
  rpc getUrlFaceFeature(UrlFaceFeatureRequest) returns (FaceFeatureResponse) {}
  rpc getBytesFaceFeature(BytesFaceFeatureRequest) returns (FaceFeatureResponse) {}
}

message UrlFaceFeatureRequest {
  string imgUrl = 1;
}

message BytesFaceFeatureRequest {
  bytes imgBytes = 1;
}

message FaceFeatureResponse {
  bytes jsonResultBytes = 1;
}